syntax = "proto3";

package filedownload;

option go_package = "echo-api/proto/download";

// FileDownload service definition
service FileDownload {
  // DownloadFile streams a file to the client
  rpc DownloadFile(DownloadFileRequest) returns (stream DownloadFileResponse) {}
  
  // ListFiles returns a list of files owned by the user
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse) {}
}

// DownloadFileRequest is used to request a file download
message DownloadFileRequest {
  string file_id = 1;
}

// DownloadFileResponse streams file data to the client
message DownloadFileResponse {
  oneof data {
    FileMetadata metadata = 1;  // First message contains metadata
    bytes chunk = 2;            // Subsequent messages contain file chunks
  }
}

// ListFilesRequest is used to list files
message ListFilesRequest {
  // Empty request, user ID is extracted from JWT token
}

// ListFilesResponse contains a list of files
message ListFilesResponse {
  repeated FileMetadata files = 1;
}

// FileMetadata contains information about the file
message FileMetadata {
  string file_id = 1;
  string filename = 2;
  string content_type = 3;
  int64 size = 4;
  string user_id = 5;
  string created_at = 6;
} 